--- a/GE.WebUI/Views/Articles/_Last.cshtml
+++ b/GE.WebUI/Views/Articles/_Last.cshtml
@@ -1,7 +1,6 @@
-﻿@model VMDetailMaterial[]
+﻿@model VMMaterial[]
 @{
-    Layout = null;
-    VMDetailMaterial item;
+    VMMaterial item;
 }
 
 <ul class="last-articles">
