--- a/GE.WebUI/Views/Articles/_ForGamersBlock.cshtml
+++ b/GE.WebUI/Views/Articles/_ForGamersBlock.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
     VMFGBGame game;
-    VMMaterialCategory cat;
+    SxVMMaterialCategory cat;
 }
 
 <!--for gamers block-->
