--- a/GE.WebUI/Views/Aphorisms/_List.cshtml
+++ b/GE.WebUI/Views/Aphorisms/_List.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
     var author = (VMAuthorAphorism)ViewData["Author"];
-    var category = (VMMaterialCategory)ViewData["Category"];
+    var category = (SxVMMaterialCategory)ViewData["Category"];
     string header = null;
     if (category != null)
     {
