--- a/GE.WebUI/Views/Articles/_Collection.cshtml
+++ b/GE.WebUI/Views/Articles/_Collection.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxExtantions.SxPagedCollection<Article>
+﻿@model SxExtantions.SxPagedCollection<VMMaterial>
 @{
     Layout = null;
     var gameTitle = (string)ViewBag.GameTitle;
