--- a/GE.WebUI/Views/Humor/Details.cshtml
+++ b/GE.WebUI/Views/Humor/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model VMDetailHumor
+﻿@model VMMaterial
 @{
     ViewBag.Title = ViewBag.Title ?? Model.Title;
     ViewBag.H1 = ViewBag.H1 ?? ViewBag.Title;
