--- a/GE.WebUI/less/aphorisms.less
+++ b/GE.WebUI/less/aphorisms.less
@@ -123,6 +123,10 @@
     line-height: 1.2;
 }
 
+.ap-list .content .m-info{
+    margin-top:0;
+}
+
 .ap-list .content .info > ul {
     list-style: none;
     font-size: 12px;
