--- a/GE.WebUI/less/humor.less
+++ b/GE.WebUI/less/humor.less
@@ -13,8 +13,9 @@
 }
 
 .humor-list__header {
-    font-size: 22px;
+    font-size: 30px;
     font-weight: 700;
+    margin-bottom:5px;
 }
 
 .humor-list__info {
