--- a/GE.WebUI/less/share-buttons.less
+++ b/GE.WebUI/less/share-buttons.less
@@ -49,6 +49,10 @@
     margin-left:@def-pad;
 }
 
+.share-buttons__counter{
+    top:-1px !important;
+}
+
 .share-buttons__icon {
     position: absolute;
     top: 0;
@@ -58,8 +62,8 @@
     background-color: @color-white;
     border-radius: 3px 0 0 3px;
     text-align: center;
-    padding-top: 6px;
     box-shadow: 1px 1px 8px rgba(255,255,255,.5);
+    padding-top:1px;
 }
 
 .share-buttons__icon::after {
