--- a/GE.WebUI/Views/Articles/List.cshtml
+++ b/GE.WebUI/Views/Articles/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxExtantions.SxPagedCollection<Article>
+﻿@model SxExtantions.SxPagedCollection<VMMaterial>
 @{
     var title = ViewBag.Title;
     var h1 = ViewBag.H1;
