--- a/GE.WebUI/Views/Games/DisplayTemplates/VMMaterial.cshtml
+++ b/GE.WebUI/Views/Games/DisplayTemplates/VMMaterial.cshtml
@@ -1,4 +1,4 @@
-﻿@model VMDetailGameMaterial
+﻿@model VMMaterial
 @{
     Layout = null;
     var hasVideo = Model.Videos.Any();
@@ -23,17 +23,17 @@
                 <div class="date">@Model.DateOfPublication</div>
                 <div class="title">
                     <h4>
-                        <a href="@Model.GetUrl(Url)">@Model.Title</a>
+                        <a href="@Model.Url(Url)">@Model.Title</a>
                     </h4>
                 </div>
                 <div class="fwd">
                     @Html.Raw(Model.Foreword)
                 </div>
                 <div class="details">
-                    <a href="@Model.GetUrl(Url)" class="btn btn-default">Подробнее</a>
+                    <a href="@Model.Url(Url)" class="btn btn-default">Подробнее</a>
                 </div>
                 <div class="info">
-                    @Html.DisplayFor(x => Model.Info)
+                    @Html.Partial("_MaterialInfo", Model)
                 </div>
             </div>
         </div>
