--- a/GE.WebUI/less/th-banner.less
+++ b/GE.WebUI/less/th-banner.less
@@ -2,6 +2,18 @@
 @import (reference) "sizes.less";
 @import (reference) "../bower_components/bootstrap/less/variables.less";
 
+.bnr{
+    border:1px solid rgba(255,255,255,.1);
+    border-radius:3px;
+    padding:@def-pad;
+}
+
+.bnr:before{
+    content:'Реклама';
+    color:@color-muted;
+    text-transform:uppercase;
+}
+
 .th-top-block > .row > div{
     padding:0;
 }
