--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using SX.WebCore.Providers;
-@using SX.WebCore;
+﻿@using SX.WebCore;
 @{
     ViewBag.Title = ViewBag.Title ?? "Новости, статьи игровой индустрии";
     var gameName = Request.RequestContext.RouteData.Values["gameTitle"];
@@ -17,6 +16,19 @@
 
     var banners = (SxBanner[])ViewBag.PageBanners;
     SxBanner banner;
+}
+
+@if (!Request.IsLocal)
+{
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- game-exe.com -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-9896332411319809"
+     data-ad-slot="8657788777"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 }
 
 @Html.Action("LastGamesNewsBlock", "News", new { lnc= 5 })
