--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -97,7 +97,13 @@
                     <div class="third">
                         @if (!Request.IsLocal)
                         {
-                        <!-- Yandex.Metrika informer --> <a href="https://metrika.yandex.ru/stat/?id=36243880&amp;from=informer" target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/36243880/3_1_FFFFFFFF_EFEFEFFF_0_pageviews" style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" onclick="try{Ya.Metrika.informer({i:this,id:36243880,lang:'ru'});return false}catch(e){}" /></a> <!-- /Yandex.Metrika informer -->
+                        <!-- Yandex.Metrika informer -->
+                            <a href="https://metrika.yandex.ru/stat/?id=36243880&amp;from=informer"
+                               target="_blank" rel="nofollow">
+                                <img src="https://informer.yandex.ru/informer/36243880/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
+                                     style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="36243880" data-lang="ru" />
+                            </a>
+                        <!-- /Yandex.Metrika informer -->
 
                         <!--LiveInternet counter-->
                             <script type="text/javascript">
