--- a/GE.WebAdmin/less/site.less
+++ b/GE.WebAdmin/less/site.less
@@ -6,7 +6,6 @@
 
 a, a:link, a:active, a:visited, a:focus, button, button:link, button:visited, button:active, button:focus, input:focus{
     outline:none !important;
-    color:inherit;
 }
 
 body{
@@ -32,4 +31,9 @@ body{
 
 #modal-error body{
     font-family: 'Roboto Condensed', sans-serif;
+}
+
+.center-h-v{
+    text-align:center;
+    vertical-align:middle;
 }
