--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -50,7 +50,9 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     <li>
-                        <form method="post" action="@Url.Action("LogOff","Account")" class="hidden"></form>
+                        <form method="post" action="@Url.Action("LogOff","Account")" class="hidden">
+                            @Html.AntiForgeryToken()
+                        </form>
                         <a href="javascript:void(0)" onclick="$(this).prev('form').submit();">Выход</a>
                     </li>
                 }
