--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -52,7 +52,7 @@
                             <a href="@Url.Action("List", "Employees")">Контакты</a>
                         </li>
                         <li>
-                            <a href="#">Правообладателям</a>
+                            <a href="@Url.Action("Edit", "SiteQuestions")">Правообладателям</a>
                         </li>
                     </ul>
                 </div>
