--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -286,10 +286,10 @@
                                 <a href="javascript:void(0)"><i class="fa fa-history fa-fw"></i> Статистика<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="@Url.Action("Index", new { controller= "requests" })">Статистика запросов</a>
+                                        <a href="@Url.Action("Index", "Requests")">Статистика запросов</a>
                                     </li>
                                     <li>
-                                        <a href="@Url.Action("userlogins", new { controller="statistics"})">Статистика входов</a>
+                                        <a href="@Url.Action("UserLogins", "Statistics")">Статистика входов</a>
                                     </li>
                                 </ul>
                             </li>
